--- a/index.html
+++ b/index.html
@@ -12,11 +12,47 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>start</title>
+    <title>WeatherApp</title>
 </head>
 
 <body>
-   
+   <header>
+
+   </header>
+   <main>
+        <section id="weather">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 mx-auto d-flex justify-content-center">
+                        <div class="box">
+                            <div class="data">
+                                <h1 id="city">
+                                    City
+                                </h1>
+                                <h2>
+                                    Temperature:
+                                </h2>
+                                <h2 id="temp">
+                                    ?
+                                </h2>
+                                <h2>
+                                    Feels Like:
+                                </h2>
+                                <h2 id="feels">
+                                    ?
+                                </h2>
+                            </div>
+                            <input type="text" id="myweather">
+                            <div id="btn">Search</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+   </main>
+   <footer>
+
+   </footer>
 </body>
 
 </html>
